--- a/templates/animal_facts.html
+++ b/templates/animal_facts.html
@@ -12,11 +12,11 @@ Animal Facts
 
         <label>
             Which animal do you want facts on?
-
-            <!-- TODO: Use a for loop to show one option element for each 
-                animal. -->
             <select name="animal">
-                <option value="koala">koala</option>
+                <option value="none">none</option>
+                {% for animal in animal_to_fact.keys() %}
+                <option value="{{ animal }}">{{ animal }}</option>
+                {% endfor %}
             </select>
         </label>
 
@@ -32,7 +32,7 @@ Animal Facts
         Here is your animal fact:
     </p>
     <p>
-        <em>Your animal fact goes here.</em>
+        <em>{{ animal_to_fact[chosen_animal] }}</em>
     </p>
 </section>
 
